# DistanceCalculatorPro

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  AIRULES.md  CHANGELOG.md  README.md  ROADMAP.md  Roadmap.docx  TODO.md  Walkthrough 17-07-2026 16h05.docx  Walkthrough.docx  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.py  test_batch_service.py  test_calculation_service.py  test_service.py  ~$lkthrough 17-07-2026 16h05.docx  ~$oadmap.docx
.github/workflows/: python.yml
app/: config.py
app/config/: config.py
app/controllers/: calculation_controller.py
app/engine/: browser_manager.py  google_maps_engine.py  google_maps_locator.py  google_maps_parser.py  google_maps_url_builder.py
app/engines/: .gitignore  base_engine.py  browser_manager.py  google_maps_engine.py  google_maps_locator.py  google_maps_url_builder.py
app/enums/: __init__.py  provider_type.py  (+2 more)
docs/: 2.ARCHITECTURE_SPECIFICATION_1.0.md  3.CODING_STANDARD_1.0.md  4.DESIGN_DECISIONS_1.0.md  CHANGELOG.md  CODE_DELIVERY_STANDARD.md  CODINGSTANDARD.md  CODING_STYLE.md  CODING_STYLE_BASELINE_v2_0.md  Compatibility Matrix.md  DESIGNDECISIONS.md  DEVELOPER_RULES.md  DOCUMENT_INDEX.md  FILE_TEST_CODING_RULE.md  GOVERNANCE_STANDARD.md  MODULE_CONTRACT.md  MODULE_CONTRACT_BASELINE_v2_0.md  Module_Responsibility_Specification_1.0.md  PRODUCT_BACKLOG.md  PROJECT_CONSTITUTION.md  README_SPRINT_01A.md  ROADMAP.md  ROADMAP_1.0.md  SOFTWARE_SPECIFICATION_BASELINE_v2_0.md  SOFTWARE_SPECIFICATION_v1_3.md  SPRINTDONEDIFINITION.md  STANDARDS_REFERENCE.md  TECHNICALDOCUMENTS.md  TRANSFER_CODE.md  WORKINGMODE-IMPLEMENTATION.md
tests/: conftest.py  test_browser.py  test_google_maps.py  test_locator.py  test_parser.py  test_parser_v2.py  test_quick1.py  test_route.py  test_search.py
(+104 files in other folders)
