[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DistanceCalculatorPro"
version = "1.0.0"
description = "Distance Calculator Pro"
requires-python = ">=3.13"

# ==========================================================
# Black
# ==========================================================

[tool.black]
line-length = 88
target-version = ["py313"]

# ==========================================================
# Ruff
# ==========================================================

[tool.ruff]
line-length = 88
target-version = "py313"

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

ignore = []

# ==========================================================
# Pytest
# ==========================================================

[tool.pytest.ini_options]

testpaths = [
    "tests",
]

python_files = [
    "test_*.py",
]

python_classes = [
    "Test*",
]

python_functions = [
    "test_*",
]

addopts = [
    "-ra",
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=100",
]

# ==========================================================
# Coverage
# ==========================================================

[tool.coverage.run]

branch = true

source = [
    "app",
]

omit = [
    "tests/*",
]

[tool.coverage.report]

show_missing = true
skip_covered = false
precision = 2

exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"